@@ -1,12 +1,19 @@
 package com.web.service.impl;
 
 import com.web.converter.NutritionPlanConverter;
+import com.web.converter.NutritionPlanDetailConverter;
+import com.web.entity.MemberEntity;
+import com.web.entity.NutritionPlanDetailEntity;
 import com.web.entity.NutritionPlanEntity;
+import com.web.entity.TrainerEntity;
 import com.web.exception.sql.EntityAlreadyExistException;
 import com.web.exception.sql.EntityNotFoundException;
 import com.web.model.dto.NutritionPlanDTO;
-import com.web.model.response.NutritionPlanResponse;
+import com.web.model.response.*;
+import com.web.repository.MemberRepository;
+import com.web.repository.NutritionPlanDetailRepository;
 import com.web.repository.NutritionPlanRepository;
+import com.web.repository.TrainerRepository;
 import com.web.service.NutritionPlanService;
 import com.web.utils.CalculatorTimestamp;
 import com.web.utils.CheckFieldObject;
@@ -16,16 +23,35 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.sql.Date;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
 public class NutritionPlanServiceImpl implements NutritionPlanService {
 
-    private NutritionPlanRepository nutritionPlanRepository;
+    private TrainerRepository trainerRepository;
+
     private NutritionPlanConverter nutritionPlanConverter;
-    private CheckFieldObject checkFieldObject;
-    private MergeObjectUtils mergeObjectUtils;
+
+    private MemberRepository memberRepository;
+
+    private NutritionPlanRepository nutritionPlanRepository;
+
+    private NutritionPlanDetailRepository nutritionPlanDetailRepository;
+
+    private NutritionPlanDetailConverter nutritionPlanDetailConverter;
+
+    @Autowired
+    public void setNutritionPlanDetailConverter(NutritionPlanDetailConverter nutritionPlanDetailConverter) {
+        this.nutritionPlanDetailConverter = nutritionPlanDetailConverter;
+    }
+
+    @Autowired
+    public void setNutritionPlanDetailRepository(NutritionPlanDetailRepository nutritionPlanDetailRepository) {
+        this.nutritionPlanDetailRepository = nutritionPlanDetailRepository;
+    }
 
     @Autowired
     public void setNutritionPlanRepository(NutritionPlanRepository nutritionPlanRepository) {
@@ -33,109 +59,67 @@ public class NutritionPlanServiceImpl implements NutritionPlanService {
     }
 
     @Autowired
+    public void setMemberRepository(MemberRepository memberRepository) {
+        this.memberRepository = memberRepository;
+    }
+
+    @Autowired
+    public void setTrainerRepository(TrainerRepository trainerRepository) {
+        this.trainerRepository = trainerRepository;
+    }
+
+    @Autowired
     public void setNutritionPlanConverter(NutritionPlanConverter nutritionPlanConverter) {
         this.nutritionPlanConverter = nutritionPlanConverter;
     }
 
-    @Autowired
-    public void setCheckFieldObject(CheckFieldObject checkFieldObject) {
-        this.checkFieldObject = checkFieldObject;
-    }
-
-    @Autowired
-    public void setMergeEntity(MergeObjectUtils mergeObjectUtils) {
-        this.mergeObjectUtils = mergeObjectUtils;
-    }
-
     @Override
-    public NutritionPlanResponse createNutritionPlan(NutritionPlanDTO nutritionPlanDTO) {
-        checkFieldObject.check(NutritionPlanDTO.class, nutritionPlanDTO);
+    public List<MemberOfTrainerResponse> getMemberOfTrainer(Long id) {
+        TrainerEntity trainerEntity = trainerRepository.findById(id).get();
 
-        if (nutritionPlanDTO.getId() != null
-                && nutritionPlanRepository.existsById(nutritionPlanDTO.getId())) {
-            throw new EntityAlreadyExistException(NutritionPlanEntity.class);
+        List<MemberEntity> memberEntities = trainerEntity.getMemberEntities();
+        List<MemberOfTrainerResponse> memberOfTrainerResponses = new ArrayList<>();
+        for (MemberEntity memberEntity : memberEntities) {
+            MemberOfTrainerResponse memberOfTrainerResponse = new MemberOfTrainerResponse();
+            memberOfTrainerResponse.setId(String.valueOf(memberEntity.getId()));
+            memberOfTrainerResponse.setName(memberEntity.getUserEntity().getFullName());
+            memberOfTrainerResponses.add(memberOfTrainerResponse);
         }
-
-        NutritionPlanEntity nutritionPlanEntity = nutritionPlanConverter.toEntity(nutritionPlanDTO);
-
-        nutritionPlanEntity = nutritionPlanRepository.save(nutritionPlanEntity);
-
-        return nutritionPlanConverter.toResponse(nutritionPlanEntity);
+        return memberOfTrainerResponses;
     }
 
     @Override
-    public NutritionPlanResponse getNutritionPlanById(Long id) {
-        return nutritionPlanRepository.findById(id)
-                .map(nutritionPlanConverter::toResponse)
-                .orElseThrow(() -> new EntityNotFoundException(NutritionPlanEntity.class));
+    public boolean saveNutritionPlan(NutritionPlanDTO dto) {
+        NutritionPlanEntity nutritionPlanEntity = nutritionPlanConverter.toEntity(dto);
+
+        MemberEntity memberEntity = memberRepository.findById(dto.getMemberId()).get();
+
+        nutritionPlanEntity.setMemberEntity(memberEntity);
+
+        return nutritionPlanRepository.save(nutritionPlanEntity) != null;
     }
 
     @Override
-    public List<NutritionPlanResponse> getAllByMemberId(Long memberId) {
-        List<NutritionPlanEntity> nutritionPlanEntities = nutritionPlanRepository.findAllByMemberEntityId(memberId);
+    public List<NutritionPlanResponsePlus> getNutritionPlanByTrainerId(Long id) {
+        List<NutritionPlanEntity> nutritionPlanEntities = nutritionPlanRepository.findByMemberEntity_TrainerEntity_Id(id);
 
-        return nutritionPlanEntities.stream().map(nutritionPlanConverter::toResponse).toList();
+        return nutritionPlanEntities.stream().map(nutritionPlanConverter::toResponsePlus).collect(Collectors.toList());
     }
 
     @Override
-    public List<NutritionPlanResponse> getAllByMemberIdAndDate(Long memberId, Date date) {
-        List<NutritionPlanEntity> nutritionPlanEntities = nutritionPlanRepository.findAllByMemberEntityIdAndPlanDate(
-                memberId,
-                date);
+    public NutritionPlanResponsePlus getNutritionPlanById(Long id) {
+        List<NutritionPlanEntity> nutritionPlanEntities = nutritionPlanRepository.findByMemberEntity_TrainerEntity_Id(id);
 
-        return nutritionPlanEntities.stream()
-                .map(nutritionPlanConverter::toResponse)
-                .toList();
+        return nutritionPlanConverter.toResponsePlus(nutritionPlanEntities.get(0));
     }
 
     @Override
-    public List<NutritionPlanResponse> getAllByMemberIdAndWeek(Long memberId, Date date) {
-        CalculatorTimestamp calculatorTimestamp = new CalculatorTimestamp(date);
+    public List<NutritionPlanDetailResponse> getNutritionPlanDetailByPlanId(Long id) {
+        NutritionPlanEntity nutritionPlanEntity = nutritionPlanRepository.findById(id).get();
 
-        List<NutritionPlanEntity> nutritionPlanEntities = nutritionPlanRepository
-                .findAllByMemberEntityIdAndPlanDateBetween(
-                        memberId,
-                        new Date(calculatorTimestamp.getStartOfWeek().getTime()),
-                        new Date(calculatorTimestamp.getEndOfWeek().getTime()));
+        List<NutritionPlanDetailEntity> nutritionPlanDetailEntities = nutritionPlanEntity.getNutritionPlanDetailEntityList();
 
-        return nutritionPlanEntities.stream()
-                .map(nutritionPlanConverter::toResponse)
-                .toList();
+        return nutritionPlanDetailEntities.stream().map(nutritionPlanDetailConverter::toResponse).collect(Collectors.toList());
     }
 
-    @Override
-    public List<NutritionPlanResponse> getAllByMemberIdAndMonth(Long memberId, Date date) {
-        CalculatorTimestamp calculatorTimestamp = new CalculatorTimestamp(date);
-
-        List<NutritionPlanEntity> nutritionPlanEntities = nutritionPlanRepository
-                .findAllByMemberEntityIdAndPlanDateBetween(
-                        memberId,
-                        new Date(calculatorTimestamp.getStartOfMonth().getTime()),
-                        new Date(calculatorTimestamp.getEndOfMonth().getTime()));
-
-        return nutritionPlanEntities.stream()
-                .map(nutritionPlanConverter::toResponse)
-                .toList();
-    }
-
-    @Override
-    public NutritionPlanResponse updateNutritionPlan(Long id, NutritionPlanDTO nutritionPlanDTO) {
-        NutritionPlanEntity oldNutritionPlanEntity = nutritionPlanRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException(NutritionPlanEntity.class));
-
-        NutritionPlanEntity newNutritionPlanEntity = nutritionPlanConverter.toEntity(nutritionPlanDTO);
-
-        mergeObjectUtils.mergeNonNullFields(newNutritionPlanEntity, oldNutritionPlanEntity);
-
-        return nutritionPlanConverter.toResponse(nutritionPlanRepository.save(oldNutritionPlanEntity));
-    }
-
-    @Override
-    public void deleteNutritionPlan(Long id) {
-        if (!nutritionPlanRepository.existsById(id)) {
-            throw new EntityNotFoundException(NutritionPlanEntity.class);
-        }
-
-        nutritionPlanRepository.deleteById(id);
-    }
 }
